# valhalla

./: BUILD.bazel  SUNWEI.md  WORKSPACE  commands.txt  sunwei_case.json  sunwei_valhalla_config.json  sunweitest.cc
bazel_script/: Binary2Header.bzl  convert_header.bzl  date_time.bzl  date_time_header.bzl
bench/thor/: costmatrix.cc  routes.cc
cmake/: Binary2Header.cmake
gengerated/mjolnir/: graph_lua_proc.h
proto/: BUILD.bazel  api.proto  directions.proto  options.proto  sign.proto  trip.proto
src/: CMakeLists.txt  filesystem.cc  proto_conversions.cc  valhalla_benchmark_adjacency_list.cc  valhalla_benchmark_loki.cc  valhalla_expand_bounding_box.cc  valhalla_export_edges.cc  valhalla_path_comparison.cc  valhalla_run_isochrone.cc  valhalla_run_matrix.cc  valhalla_run_route.cc  valhalla_service.cc  worker.cc
src/baldr/: datetime.cc  graphreader.cc  graphtile.cc  graphtileheader.cc  incident_singleton.h  tilehierarchy.cc
src/loki/: height_action.cc  polygon_search.cc  status_action.cc
src/meili/: geometry_helpers.cc
src/midgard/: logging.cc  tiles.cc
src/mjolnir/: admin.cc  adminbuilder.cc  convert_transit.cc  elevationbuilder.cc  graphbuilder.cc  graphfilter.cc  graphtilebuilder.cc  hierarchybuilder.cc  idtable.h  ingest_transit.cc  osmdata.cc  speed_assigner.h  statistics.cc  statistics_database.cc  transitbuilder.cc  util.cc  valhalla_add_predicted_traffic.cc  valhalla_assign_speeds.cc  valhalla_benchmark_admins.cc  valhalla_build_admins.cc  valhalla_build_connectivity.cc  valhalla_build_statistics.cc  valhalla_build_tiles.cc  valhalla_convert_transit.cc  valhalla_fetch_transit.cc  valhalla_ingest_transit.cc  valhalla_query_transit.cc  valhalla_validate_transit.cc  valhalla_ways_to_edges.cc  validatetransit.cc
src/odin/: maneuversbuilder.cc  narrativebuilder.cc
src/sif/: autocost.cc  bicyclecost.cc  dynamiccost.cc  motorcyclecost.cc  motorscootercost.cc  nocost.cc  pedestriancost.cc  transitcost.cc  truckcost.cc
src/skadi/: sample.cc
src/thor/: route_matcher.cc
src/tyr/: matrix_serializer.cc  route_serializer_osrm.cc  route_serializer_valhalla.cc  route_summary_cache.h  serializers.cc  trace_serializer.cc
sunweimain/: main.cc
sunweitest/: aid.cpp  aid.h  comm.h  main.cc
sunweitestproto/: BUILD  sunwei.proto
test/: astar.cc  attributes_controller.cc  countryaccess.cc  double_bucket_queue.cc  edgestatus.cc  elevation_builder.cc  filesystem.cc  graphparser.cc  graphreader.cc  incident_loading.cc  loki_service.cc  node_search.cc  optimizer.cc  parse_request.cc  search.cc  test.cc  test.h  util_mjolnir.cc  utrecht.cc
test/gurka/: gurka.cc  gurka.h  test_admin_sidewalk_crossing_override.cc  test_admin_uk_override.cc  test_avoids.cc  test_build_admin.cc  test_oneways.cc  test_reach.cc
third_party_bazel_files/: benchmark.BUILD  boost.BUILD  cpp-statsd-client.BUILD  curl.BUILD  cxxopts.BUILD  date.BUILD  dirent.BUILD  just_gtfs.BUILD  libosmium.BUILD  lua.BUILD  lz4.BUILD  microtar.BUILD  osm_binary.BUILD  protozero.BUILD  rapidjson.BUILD  robin-hood-hashing.BUILD  spatialite.BUILD  sqilte3.BUILD
third_party_bazel_files/benchmark/: BUILD.bazel
third_party_bazel_files/cpp-statsd-client/: BUILD.bazel
third_party_bazel_files/curl/: BUILD.bazel
third_party_bazel_files/cxxopts/: BUILD.bazel
third_party_bazel_files/date/: BUILD.bazel
third_party_bazel_files/dirent/: BUILD.bazel
third_party_bazel_files/just_gtfs/: BUILD.bazel
third_party_bazel_files/libosmium/: BUILD.bazel
third_party_bazel_files/lz4/: BUILD.bazel
third_party_bazel_files/microtar/: BUILD.bazel
third_party_bazel_files/osm_binary/: BUILD.bazel
third_party_bazel_files/protozero/: BUILD.bazel
third_party_bazel_files/pybind11/: BUILD.bazel
third_party_bazel_files/rapidjson/: BUILD.bazel
third_party_bazel_files/robin-hood-hashing/: BUILD.bazel
third_party_bazel_files/spatialite/: BUILD.bazel
third_party_bazel_files/sqlite3/: BUILD.bazel
valhalla/: config.h  proto_conversions.h  worker.h
valhalla/baldr/: accessrestriction.h  admin.h  admininfo.h  attributes_controller.h  complexrestriction.h  connectivity_map.h  curler.h  datetime.h  directededge.h  double_bucket_queue.h  edgeinfo.h  edgetracker.h  graphid.h  graphreader.h  graphtile.h  graphtileheader.h  graphtileptr.h  location.h  merge.h  nodeinfo.h  nodetransition.h  openlr.h  pathlocation.h  predictedspeeds.h  rapidjson_utils.h  sign.h  signinfo.h  streetname.h  streetname_us.h  streetnames.h  streetnames_factory.h  streetnames_us.h  tilehierarchy.h  time_info.h  timedomain.h  traffictile.h  transitdeparture.h  transitroute.h  transitschedule.h  transitstop.h  (+5 more)
valhalla/loki/: node_search.h  polygon_search.h  reach.h  search.h  worker.h
valhalla/meili/: candidate_search.h  geometry_helpers.h  grid_range_query.h  map_matcher.h  map_matcher_factory.h  match_result.h  measurement.h  routing.h  state.h  traffic_segment_matcher.h  transition_cost_model.h  viterbi_search.h
valhalla/midgard/: aabb2.h  ellipse.h  gridded_data.h  obb2.h  point2.h  pointll.h  polyline2.h  sequence.h  tiles.h  util.h  vector2.h
valhalla/mjolnir/: admin.h  admin_lua_proc.h  adminconstants.h  bssbuilder.h  complexrestrictionbuilder.h  convert_transit.h  countryaccess.h  dataquality.h  directededgebuilder.h  edgeinfobuilder.h  ferry_connections.h  graphbuilder.h  graphenhancer.h  graphfilter.h  graphtilebuilder.h  ingest_transit.h  luatagtransform.h  node_expander.h  osmaccess.h  osmaccessrestriction.h  osmadmindata.h  osmdata.h  osmnode.h  osmpbfparser.h  osmpronunciation.h  osmrestriction.h  osmway.h  pbfadminparser.h  pbfgraphparser.h  servicedays.h  timeparsing.h  util.h  valhalla_add_elevation_utils.h  validatetransit.h
valhalla/odin/: directionsbuilder.h  enhancedtrippath.h  maneuver.h  maneuversbuilder.h  markup_formatter.h  narrative_builder_factory.h  narrativebuilder.h  sign.h  signs.h  transitrouteinfo.h  util.h  worker.h
valhalla/sif/: autocost.h  bicyclecost.h  costconstants.h  costfactory.h  dynamiccost.h  edgelabel.h  motorcyclecost.h  motorscootercost.h  nocost.h  pedestriancost.h  recost.h  transitcost.h  (+1 more)
(+20 files in other folders)
