cc_library(
    name = "baldr",
    hdrs = glob(["valhalla/baldr/*.h"]),
    srcs = glob(["src/baldr/*.cc", "src/baldr/*.h",]),
    deps = [
        ":midgard",
        "//proto:options_cc_proto",
        "//proto:common_cc_proto",
        "@com_google_protobuf//:protobuf",
        "@boost//:filesystem",
        "@boost//:system",
        "@boost//:algorithm",
        "@date//:date",
        # curl
        # zlib
    ],
    # copts = [
    #     "-std=c++14",
    # ]
)

### midgard

cc_library(
    name = "midgard",
    hdrs = glob(["valhalla/midgard/*.h",]) + [
        "valhalla/filesystem.h",
        # 以下还是得添加
        "third_party/robin-hood-hashing/src/include/robin_hood.h",
    ],
    srcs = glob(["src/midgard/*.cc",]),
    includes = [
        "valhalla/midgard",
        "valhalla",
        "third_party/robin-hood-hashing/src/include"
    ],
    deps = [
        "@boost//:fiber",
        # "//third_party/robin-hood-hashing:robin-hood",
        # boost
        # robin_hood::robin_hood
    ],
    copts = [
        "-std=c++14",
    ],
    # copts = [
    #     "-Ivalhalla",
    #     "-Ivalhalla/midgard",
    #     "-Ithird_party/robin-hood-hashing/src/include",
    # ],
)

#### Baldr
# cc_library(
#     name = "date_time_lib",
#     hdrs = cc_date_time(["africa", "europe"]),
#     visibility = ["//visibility:public"],
# )
# cc_library(
#     name = "baldr",
#     srcs = glob(["src/*.cc"]),
#     hdrs = generate_header_files(ctx) + glob(["valhalla/baldr/*.h"]),
#     visibility = ["//visibility:public"],
# )

cc_binary(
    name = "sunweitest",
    srcs = [
        "sunweitest.cc",
    ],
    deps = [
        ":midgard",
    ]
)