cc_proto_library(
    name = "api_cc_proto",
    deps = [
        ":api_proto",
    ],
    visibility = ["//visibility:public"]
)

proto_library(
    name = "api_proto",
    srcs = ["api.proto"],
    deps = [
        ":options_proto",
        ":trip_proto",
        ":directions_proto",
        ":info_proto",
        ":status_proto"
    ],
    visibility = ["//visibility:public"],
    # exports = [
    #     ":options_proto",
    #     ":trip_proto",
    #     ":directions_proto",
    #     ":info_proto",
    #     ":status_proto"
    # ],
)

cc_proto_library(
    name = "common_cc_proto",
    deps = [
        ":common_proto",
    ],
    visibility = ["//visibility:public"]
)

proto_library(
    name = "common_proto",
    srcs = ["common.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "directions_cc_proto",
    deps = [
        ":directions_proto",
    ],
    visibility = ["//visibility:public"]
)

proto_library(
    name = "directions_proto",
    srcs = ["directions.proto"],
    deps = [
        ":common_proto",
        ":sign_proto",
    ],
    visibility = ["//visibility:public"],
    # exports = [
    #     ":common_proto",
    #     ":sign_proto",
    # ],
)

cc_proto_library(
    name = "incidents_cc_proto",
    deps = [
        ":incidents_proto",
    ],
    visibility = ["//visibility:public"]
)

proto_library(
    name = "incidents_proto",
    srcs = ["incidents.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "info_cc_proto",
    deps = [
        ":info_proto",
    ],
    visibility = ["//visibility:public"]
)

proto_library(
    name = "info_proto",
    srcs = ["info.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "options_cc_proto",
    deps = [
        ":options_proto",
    ],
    visibility = ["//visibility:public"]
)

proto_library(
    name = "options_proto",
    srcs = ["options.proto"],
    deps = [":common_proto"],
    visibility = ["//visibility:public"],
    # exports = [":common_proto"],
)

cc_proto_library(
    name = "sign_cc_proto",
    deps = [
        ":sign_proto",
    ],
    visibility = ["//visibility:public"]
)

proto_library(
    name = "sign_proto",
    srcs = ["sign.proto"],
    deps = [":common_proto"],
    visibility = ["//visibility:public"],
    # exports = [":common_proto"],
)

cc_proto_library(
    name = "status_cc_proto",
    deps = [
        ":status_proto",
    ],
    visibility = ["//visibility:public"]
)

proto_library(
    name = "status_proto",
    srcs = ["status.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "transit_fetch_cc_proto",
    deps = [
        ":transit_fetch_proto",
    ],
    visibility = ["//visibility:public"]
)

proto_library(
    name = "transit_fetch_proto",
    srcs = ["transit_fetch.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "transit_cc_proto",
    deps = [
        ":transit_proto",
    ],
    visibility = ["//visibility:public"]
)

proto_library(
    name = "transit_proto",
    srcs = ["transit.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "trip_cc_proto",
    deps = [
        ":trip_proto",
    ],
    visibility = ["//visibility:public"]
)

proto_library(
    name = "trip_proto",
    srcs = ["trip.proto"],
    deps = [
        ":common_proto",
        ":sign_proto",
        ":incidents_proto"
    ],
    visibility = ["//visibility:public"],
    # exports = [
    #     ":common_proto",
    #     ":sign_proto",
    # ],
)

