# 推荐的方式是把这个文件集中放在某个新的文件夹中

DATE_HEADERS = glob(["date/include/date/*.h"])
DATE_SRCS = glob(["date/src/*.cpp"])

cc_library(
    name = "date",
    srcs = DATE_SRCS,
    hdrs = DATE_HEADERS,
    # includes = [
    #     "date/include",
    #     "date/include/date",
    #     "date",
    # ],
    include_prefix = "date",
    visibility = ["//visibility:public"],
)