cc_library(
    name = "osm-binary",
    hdrs = ["include/osmpbf/osmpbf.h"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "fileformat_proto",
    srcs = ["src/fileformat.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "osmformat_proto",
    srcs = ["src/osmformat.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "osm_binary_proto",
    deps = [":fileformat_proto", ":osmformat_proto"],
    visibility = ["//visibility:public"],
)